# nemo

./: .git-blame-ignore-revs  .gitignore  .mailmap  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  build.sh  flake.nix  miri-cargo-lock.patch  release.yml  run.sh  rust-toolchain.toml  rustfmt.toml  testfile.rls  testfile1.rls  testfile2.rls  testfile3.rls
libs/macros/: Cargo.toml
libs/macros/src/: lib.rs
nemo/: Cargo.toml  README.md
nemo-benches/: Cargo.toml  README.md
nemo-benches/benches/: input.rs  operations.rs  output.rs  seek.rs  union_columns.rs
nemo-cli/: Cargo.toml  README.md
nemo-cli/src/: cgroup.rs  cli.rs  error.rs  example.rls  main.rs  sample.tao  tracing.rs
nemo-cli/tests/: blackbox_integration.rs  cli.rs  incremental_imports.rs
nemo-fmt/: Cargo.toml
nemo-fmt/src/: cli.rs  main.rs
nemo-language-server/: Cargo.toml
nemo-language-server/src/: language_server.rs  lib.rs  main.rs
nemo-language-server/src/language_server/: lsp_component.rs  nemo_position.rs  token_type.rs
nemo-performance/: Cargo.toml
nemo-performance/src/: bitvector.rs  gen_trie.rs  main.rs  navigation.rs  old.rs  operators.rs  project.rs
nemo-performance/src/old/: builder.rs  column_scan.rs  column_scan_prune.rs  interval.rs  partial_trie_scan.rs  permutator.rs  project_reorder.rs  trie.rs  trie_scan_prune.rs
nemo-performance/tests/: blackbox_integration.rs
nemo-physical/: Cargo.toml  README.md
nemo-physical/src/: aggregates.rs  arithmetic.rs  benches.rs  builder_proxy.rs  columnar.rs  datasources.rs  datatypes.rs  datavalues.rs  dictionary.rs  error.rs  function.rs  lib.rs  logical_types.rs  management.rs  meta.rs  permutator.rs  resource.rs  storagevalues.rs  table_reader.rs  tabular.rs  util.rs
nemo-physical/src/aggregates/: operation.rs  processors.rs
nemo-physical/src/arithmetic/: expression.rs  traits.rs
nemo-physical/src/benches/: dict-bench.rs  dictionary.rs  dynamic_scans.rs  seek.rs
nemo-physical/src/columnar/: adaptive_column_builder.rs  column.rs  column_builders.rs  column_storage.rs  column_types.rs  columnbuilder.rs  columnscan.rs  columntype.rs  interval_lookup.rs  intervalcolumn.rs  operations.rs  traits.rs
nemo-physical/src/condition/: statement.rs
nemo-physical/src/datasources/: bindings.rs  sorted_table_buffer.rs  sorted_tuple_buffer.rs  table_providers.rs  table_writer.rs  tuple_buffer.rs  tuple_writer.rs
nemo-physical/src/datatypes/: casting.rs  column_data_type.rs  data_type_name.rs  data_value.rs  double.rs  field.rs  float.rs  float_is_nan.rs  floor_to_usize.rs  into_datavalue.rs  ring.rs  run_length_encodable.rs  storage_type_name.rs  storage_value.rs
nemo-physical/src/datavalues/: any_datavalue.rs  boolean.rs  boolean_datavalue.rs  datavalue.rs  errors.rs  float_datavalues.rs  integer_datavalues.rs  iri_datavalue.rs  lang_string_datavalue.rs  long_datavalue.rs  map_datavalue.rs  null_datavalue.rs  other_datavalue.rs  string_datavalue.rs  syntax.rs  tuple_datavalue.rs
nemo-physical/src/dictionary/: bytes_buffer.rs  bytes_dictionary.rs  bytes_pair_dictionary.rs  datavalue_dictionary.rs  dictionary_string.rs  dv_converter.rs  hash_map_dictionary.rs  infix_dictionary.rs  map_dv_dict.rs  meta_dictionary.rs  meta_dv_dict.rs  null_dv_dict.rs  old_dictionaries.rs  pair_dv_converter.rs  prefixed_string_dictionary.rs  ranked_pair_dictionary.rs  ranked_pair_dv_dict.rs  ranked_pair_iri_dv_dict.rs  ranked_pair_langstring_dv_dict.rs  ranked_pair_other_dv_dict.rs  string_dictionary.rs  string_dv_dict.rs  string_iri_dv_dict.rs  string_langstring_dv_dict.rs  string_map.rs  string_other_dv_dict.rs  string_pair_dictionary.rs  string_pair_dv_dict.rs  tuple_dv_dict.rs  value_serializer.rs
nemo-physical/src/function/: definitions.rs  evaluation.rs  new_definitions.rs  new_tree.rs  program.rs  stack.rs  tree.rs
nemo-physical/src/logical_types/: rule_model.rs  types.rs
nemo-physical/src/management/: bytesized.rs  database.rs  execution_plan.rs  type_analysis.rs  util.rs
nemo-physical/src/meta/: timing.rs
nemo-physical/src/storagevalues/: column_data_type.rs  double.rs  field.rs  float.rs  run_length_encodable.rs  storagetype.rs  storagevalue.rs
nemo-physical/src/tabular/: buffer.rs  filters.rs  operations.rs  rowscan.rs  rowscan_mut.rs  table_types.rs  traits.rs  trie.rs  triescan.rs
nemo-physical/src/util/: bitset.rs  hook.rs  mapping.rs  operator_tree.rs  tagged_tree.rs  test_util.rs
nemo-python/: Cargo.toml  README.md  pyproject.toml
nemo-python/src/: lib.rs
nemo-python/tests/: test.py  test_backbox.py  test_blackbox.py  test_example.py  test_output.py  test_reason.py  unitest.py
nemo-static-checks/: Cargo.toml
nemo-static-checks/src/: cli.rs  lib.rs  main.rs  static_checks.rs
nemo-static-checks/src/static_checks/: acyclicity_checks.rs  acyclicity_graphs.rs  collection_traits.rs  cyclicity_checks.rs  file_properties.rs  msa.rs  positions.rs  rule_properties.rs  rule_set.rs  rules_properties.rs
nemo-static-checks/tests/: test.rs
nemo-wasm/: Cargo.toml  README.md
nemo-wasm/src/: language_server.rs  lib.rs
nemo-wasm/src/models/: inner_table_query.rs  inner_table_query_child_information.rs  mod.rs  predicate_with_parameters.rs  rule.rs  table_entries_for_tree_nodes_query.rs  table_entries_for_tree_nodes_response_inner.rs  table_entry_query.rs  table_entry_response.rs  table_query_base.rs  table_query_base_table_entries.rs  table_query_base_table_entries_pagination.rs  table_response_base.rs  table_response_base_meta_information.rs  table_response_base_table_entries.rs  table_response_base_table_entries_pagination.rs  tree_for_table_query.rs  tree_for_table_response.rs  (+1 more)
nemo/benches/: operations.rs  seek.rs  seek_iai.rs
nemo/src/: api.rs  builder_proxy.rs  chase_model.rs  error.rs  execution.rs  io.rs  lib.rs  model.rs  parser.rs  program_analysis.rs  rule_file.rs  rule_model.rs  rules.rs  saturator.rs  static_checks.rs  syntax.rs  table_manager.rs  types.rs  util.rs
nemo/tests/: test.rs
xtask/: Cargo.toml
xtask/src/: bin_name.rs  commands.rs  main.rs
(+1543 files in other folders)
