[workspace]

members = [
    "nemo",
    "nemo-cli",
    "nemo-physical",
    "nemo-python",
]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
debug = true

#debug profile without debug assertions
[profile.debug-noassert]
inherits = "dev"
debug-assertions = false

#profile with minimal executable size
[profile.release-minimal]
inherits = "release"
panic = "abort"
debug = false
strip = true

[profile.bench]
inherits = "release-minimal"
