[workspace]
resolver = "2"
default-members = [
    "nemo",
    "nemo-cli",
    "nemo-physical",
    "nemo-python",
    "nemo-language-server",
]
members = [
    "nemo",
    "nemo-cli",
    "nemo-physical",
    "nemo-python",
    "nemo-language-server",
    "nemo-wasm",
    "xtask",
]

[workspace.package]
description = "Nemo, a datalog-based rule engine for fast and scalable analytic data processing in memory"
version = "0.7.2-dev"
authors = [
"Alex Ivliev <alex.ivliev@tu-dresden.de>",
"Aidan Bailey <dev@aidanbailey.me>",
"Jakob Steinberg <jakob_maximilian.steinberg@mailbox.tu-dresden.de>",
"Lukas Gerlach <lukas.gerlach@tu-dresden.de>",
"Larry González <larry.gonzalez@tu-dresden.de>",
"Markus Krötzsch <markus.kroetzsch@tu-dresden.de>",
"Matthias Meissner <matthias.meissner2@mailbox.tu-dresden.de>",
"Maximilian Marx <maximilian.marx@tu-dresden.de>",
"Simon Meusel <simon.meusel@mailbox.tu-dresden.de>",
"Stefan Ellmauthaler <stefan.ellmauthaler@tu-dresden.de>",
]
edition = "2021"
homepage = "https://github.com/knowsys/nemo"
license = "APACHE-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/knowsys/nemo"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
debug = true

#debug profile without debug assertions
[profile.debug-noassert]
inherits = "dev"
debug-assertions = false

#profile with minimal executable size
[profile.release-minimal]
inherits = "release"
panic = "abort"
debug = false
strip = true

[profile.bench]
inherits = "release-minimal"
