[workspace]
resolver = "2"
default-members = [
    "nemo",
    "nemo-cli",
    "nemo-physical",
    "nemo-python",
    "nemo-language-server",
]
members = [
    "nemo",
    "nemo-cli",
    "nemo-physical",
    "nemo-python",
    "nemo-language-server",
    "nemo-wasm",
    "xtask",
]

[workspace.package]
description = "Nemo, a datalog-based rule engine for fast and scalable analytic data processing in memory"
version = "0.10.1-dev"
authors = [
"Alex Ivliev <alex.ivliev@tu-dresden.de>",
"Aidan Bailey <dev@aidanbailey.me>",
"Jakob Steinberg <jakob_maximilian.steinberg@mailbox.tu-dresden.de>",
"Lukas Gerlach <lukas.gerlach@tu-dresden.de>",
"Larry González <larry.gonzalez@tu-dresden.de>",
"Markus Krötzsch <markus.kroetzsch@tu-dresden.de>",
"Matthias Meissner <matthias.meissner2@mailbox.tu-dresden.de>",
"Maximilian Marx <maximilian.marx@tu-dresden.de>",
"Simon Meusel <simon.meusel@mailbox.tu-dresden.de>",
"Stefan Ellmauthaler <stefan.ellmauthaler@tu-dresden.de>",
]
edition = "2024"
homepage = "https://github.com/knowsys/nemo"
license = "APACHE-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/knowsys/nemo"

[workspace.dependencies]
ariadne = "0.6.0"
ascii_tree = "0.1.1"
assert_fs = "1.0.13"
async-trait = "0.1.89"
clap = "4.5.38"
colored = "3"
delegate = "0.13.3"
env_logger = "*"
flate2 = "1"
futures = "0.3.21"
itertools = "0.14.0"
log = "0.4"
num = "0.4.0"
oxiri = "0.2.11"
rand = "0.9.2"
reqwest = "0.13.2"
serde = "1.0.219"
serde_json = "1.0.140"
strum = "0.28.0"
strum_macros = "0.28.0"
test-log = "0.2"
thiserror = "2.0"
tokio = "1.47.1"
urlencoding = "2.1.3"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
debug = true

#debug profile without debug assertions
[profile.debug-noassert]
inherits = "dev"
debug-assertions = false

#profile with minimal executable size
[profile.release-minimal]
inherits = "release"
panic = "abort"
debug = false
strip = true

[profile.bench]
inherits = "release-minimal"
