[package]
name = "nemo-benches"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[[bin]]
name = "dict-bench"
path = "src/bin/dict-bench.rs"

[dependencies]
nemo-physical = { path = "../nemo-physical", default-features = false }
nemo = { path = "../nemo", default-features = false }
rand = "0.8.5"
flate2 = "1"

[dev-dependencies]
env_logger = "*"
criterion = { version = "0.5", features = [ "html_reports" ] }
rand_pcg = "0.3"
polars = "0.30"

[target.'cfg(unix)'.dev-dependencies]
iai = "0.1" # needs valgrind -> unix only

[[bench]]
name = "seek"
harness = false

# iai - based benchmarks, only on unix
[[bench]]
name = "seek_iai"
harness = false

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "input"
harness = false

[[bench]]
name = "output"
harness = false
