[package]
name = "nemo-benches"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
nemo-physical = { path = "../nemo-physical", default-features = false }
nemo = { path = "../nemo", default-features = false }
rand = "0.8.5"

[dev-dependencies]
env_logger = "*"
criterion = { version = "0.5", features = [ "html_reports" ] }
rand_pcg = "0.3"

[[bench]]
name = "seek"
harness = false

[[bench]]
name = "input"
harness = false

[[bench]]
name = "output"
harness = false
