[package]
name = "nemo-cli"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
default-run = "nmo"

[[bin]]
name = "nmo"
path = "src/main.rs"

[dependencies]
log = { version = "0.4", features = [ "max_level_trace", "release_max_level_info" ] }
clap = { version = "4.0.32", features = [ "derive", "cargo", "env" ] }
colored = "2"
env_logger = "*"
serde_json = "1.0.108"

nemo = { path = "../nemo" }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0.13"
dir-test = "0.2.1"
predicates = "3.0"
test-log = "0.2"
