[package]
name = "nemo-cli"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
default-run = "nmo"

[[bin]]
name = "nmo"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
log = { workspace = true, features = [ "max_level_trace", "release_max_level_info" ] }
clap = { workspace = true, features = [ "derive", "cargo", "env" ] }
colored = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [ "rt", "macros" ] }

nemo = { path = "../nemo" }
ariadne = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = { workspace = true }
dir-test = "0.4.1"
predicates = "3.0"
test-log = { workspace = true }

