[package]
name = "nemo-language-server"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[[bin]]
name = "nemo-language-server"
path = "src/main.rs"
required-features = ["tokio"]

[features]
default = ["tokio"]
# Allows building for web assembly environments
js = []
tokio = ["dep:tokio"]

[dependencies]
anyhow = "1.0"
line-index = "0.1.1"
nemo = { path = "../nemo", default-features = false }
futures = "0.3.21"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.4.0", features = ["macros", "io-util", "rt-multi-thread", "io-std"], optional = true }
tower-service = "0.3.2"
lsp-document = "0.6.0"
tower-lsp = "0.20.0"
