[package]
name = "nemo-performance"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nmo-perf"
path = "src/main.rs"

[dependencies]
log = { version = "0.4", features = [ "max_level_trace", "release_max_level_info" ] }
clap = { version = "4.0.32", features = [ "derive", "cargo", "env" ] }
colored = "2"
env_logger = "*"
serde_json = "1.0.108"
rand = "0.8"
bitvec = "1.0.1"
bytesize = "1.2"
streaming-iterator = "0.1.9"

nemo = { path = "../nemo" }
nemo-physical = { path = "../nemo-physical" }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0.13"
dir-test = "0.1"
predicates = "3.0"
test-log = "0.2"
