[package]
name = "nemo-physical"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[features]
default = ["timing"]
# Enables time measurements using the "howlong" crate
# If this feature is not enabled, all time measurements will display zero instead
timing = ["dep:howlong"]

[[bin]]
name = "dict-bench"
path = "src/benches/dict-bench.rs"

[dependencies]
enum_dispatch = "0.3.12"
log = "0.4"
bytesize = "1.2"
thiserror = "1.0"
num = "0.4.0"
ascii_tree = "0.1.1"
once_cell = "1"
linked-hash-map = "0.5.6"
lru = "0.12"
howlong = { version = "0.1", optional = true }
reqwest = "0.11.18"
delegate = "0.10.0"
regex = "1.9.5"
hashbrown = "0.14"
bitvec = "1.0.1"
streaming-iterator = "0.1.9"
flate2 = "1"

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
rand = "0.8"
env_logger = "*"
test-log = "0.2"
quickcheck = "1"
quickcheck_macros = "1"
flate2 = "1"
rand_pcg = "0.3.1"
