[package]
name = "nemo-physical"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[features]
check_column_sorting = []
old_dictionaries = []

[[bin]]
name = "dict-bench"
path = "src/benches/dict-bench.rs"
required-features = ["old_dictionaries"]

[dependencies]
enum_dispatch = "0.3.12"
log = "0.4"
thiserror = "2.0"
num = "0.4.0"
ascii_tree = "0.1.1"
once_cell = "1"
linked-hash-map = "0.5.6"
lru = "0.16"
cpu-time = "1.0"
reqwest = "0.12.2"
delegate = "0.13"
regex = "1.9.5"
hashbrown = "0.15.2"
bitvec = "1.0.1"
streaming-iterator = "0.1.9"
flate2 = "1"
unicode-segmentation = "1.11.0"
urlencoding = "2.1.3"
oxiri = "0.2.2"
path-slash = "0.2.1"
levenshtein = "1.0.5"
serde_urlencoded = "0.7.1"
serde = {version = "1.0.219", features=["derive"]}
itertools = "0.14.0"

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
rand = "0.8"
env_logger = "*"
test-log = "0.2"
quickcheck = "1"
quickcheck_macros = "1"
flate2 = "1"
rand_pcg = "0.3.1"

[target.'cfg(target_family = "wasm")'.dependencies]
wasmtimer = "0.4.1"
