[package]
name = "nemo-physical"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[features]
check_column_sorting = []
old_dictionaries = []

[[bin]]
name = "dict-bench"
path = "src/benches/dict-bench.rs"
required-features = ["old_dictionaries"]

[dependencies]
enum_dispatch = "0.3.12"
log = { workspace = true }
thiserror = { workspace = true }
num = { workspace = true }
ascii_tree = { workspace = true }
async-trait = { workspace = true }
once_cell = "1"
linked-hash-map = "0.5.6"
lru = "0.16"
cpu-time = "1.0"
reqwest = { workspace = true }
delegate = { workspace = true }
regex = "1.9.5"
hashbrown = "0.16.0"
streaming-iterator = "0.1.9"
flate2 = { workspace = true }
unicode-segmentation = "1.11.0"
urlencoding = { workspace = true }
oxiri = { workspace = true }
path-slash = "0.2.1"
levenshtein = "1.0.5"
serde_urlencoded = "0.7.1"
serde = { workspace = true, features =["derive"]}
itertools = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
env_logger = { workspace = true }
test-log = { workspace = true }
quickcheck = "1"
quickcheck_macros = "1"
flate2 = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
wasmtimer = "0.4.1"
