[package]
name = "nemo-python"
description = "Python bindings for nemo, a fast in-memory rule engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[lib]
name = "nmo_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = [ "extension-module" ] }
nemo = { path = "../nemo" }
