[package]
name = "nemo-wasm"
description = "WebAssembly bindings for nemo, a fast in-memory rule engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.63"
nemo = { path = "../nemo", features = [ "js" ], default-features = false }
nemo-physical = { path = "../nemo-physical", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [ "Blob", "FileReaderSync" ]}
