[package]
name = "nemo-wasm"
description = "WebAssembly bindings for nemo, a fast in-memory rule engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["web_sys_unstable_apis"]
web_sys_unstable_apis = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }

[dependencies]
async-trait = { workspace = true }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.63"
nemo = { path = "../nemo", features = [ "js" ], default-features = false }
nemo-physical = { path = "../nemo-physical", default-features = false }
nemo-language-server = { path = "../nemo-language-server", features = [ "js" ], default-features = false}
futures = { workspace = true }
gloo-utils = { version = "0.2.0", features = ["serde"] }
thiserror = { workspace = true }
# NOTE: the version of wasm-bindgen must be available in nixpkgs-25.11, cf.  https://search.nixos.org/packages?query=wasm-bindgen-cli
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [ "Blob", "FileReaderSync", "FileSystemSyncAccessHandle" ]}
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.cargo-udeps.ignore]
development = ["wasm-bindgen-test"] # not actually used, since we don't have wasm tests

