[package]
name = "nemo"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[features]
# Allows building for web assembly environments
# Enables the "js" feature of the "getrandom" crate
js = ["getrandom/js"]

[dependencies]
nemo-physical = { path = "../nemo-physical", default-features = false }
log = "0.4"
nom = "7.1.1"
petgraph = "0.6.3"
petgraph-graphml = "3.0.0"
rand = "0.8.5"
csv = "1.1.6"
thiserror = "2.0"
flate2 = "1"
sanitise-file-name = "1.0.0"
getrandom = { version = "0.2.9", default-features = false }
path-slash = "0.2.1"
oxiri = "0.2.2"
tokio = { version = "1.40.0", features = ["rt"] }
reqwest = { version = "0.12.2", features = ["gzip", "brotli", "zstd", "deflate"] }
num = "0.4.0"
ascii_tree = "0.1.1"
serde_json = "1.0.108"
serde = { version = "1.0.138", features = ["derive"] }
tower-lsp = "0.20.0"
dyn-clone = "1.0.16"
unicode-ident = "1.0.12"
nom-greedyerror = "0.5.0"
nom-supreme = "0.8.0"
enum-assoc = "1.1.0"
ariadne = { version = "0.4.1", features = ["auto-color"] }
strum = "0.26.3"
strum_macros = "0.26.4"
similar-string = "1.4.3"
bytecount = "0.6.8"
colored = "2"
oxrdfio = "0.1.6"
oxrdf = "0.2.4"
delegate = "0.13.3"

[dev-dependencies]
env_logger = "*"
assert_fs = "1.0"
test-log = "0.2"
quickcheck = "1"
quickcheck_macros = "1"
