[package]
name = "nemo"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[features]
# Allows building for web assembly environments
# Enables the "js" feature of the "getrandom" crate
js = ["getrandom/js"]

[dependencies]
nemo-physical = { path = "../nemo-physical", default-features = false }
log = "0.4"
nom = "7.1.1"
petgraph = "0.8.3"
petgraph-graphml = "5.0.0"
rand = "0.8"
csv = "1.1.6"
thiserror = "2.0"
flate2 = "1"
sanitise-file-name = "1.0.0"
getrandom = { version = "0.2.9", default-features = false }
oxiri = "0.2.2"
reqwest = { version = "0.12.2", features = [
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
num = "0.4.0"
ascii_tree = "0.1.1"
async-trait = "0.1.89"
serde_json = "1.0.108"
serde = { version = "1.0.138", features = ["derive"] }
tower-lsp = "0.20.0"
dyn-clone = "1.0.16"
unicode-ident = "1.0.12"
nom-greedyerror = "0.5.0"
nom-supreme = "0.8.0"
enum-assoc = "1.1.0"
ariadne = { version = "0.5.1", features = ["auto-color"] }
strum = "0.27.1"
strum_macros = "0.27.1"
similar-string = "1.4.3"
bytecount = "0.6.8"
colored = "3"
spargebra = { version = "0.3.5" }
urlencoding = "2.1.3"
oxrdfio = "0.1.6"
oxrdf = "0.2.4"
delegate = "0.13.3"
orx-imp-vec = "2.14"
itertools = "0.14.0"
indexmap = "2.10.0"
paste = "1.0.15"
serde_state = { version = "0.4.8", features = ["derive"] }

[dev-dependencies]
env_logger = "*"
assert_fs = "1.0"
test-log = "0.2"
quickcheck = "1"
quickcheck_macros = "1"
tokio = { version = "1.47.1", features = [ "rt", "macros" ] }

