[package]
name = "nemo"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[features]
# Allows building for web assembly environments
# Enables the "js" feature of the "getrandom" crate
js = ["getrandom/js"]

[dependencies]
nemo-physical = { path = "../nemo-physical", default-features = false }
log = { workspace = true }
nom = "7.1.1"
petgraph = "0.8.3"
petgraph-graphml = "5.0.0"
rand = { workspace = true }
csv = "1.1.6"
thiserror = { workspace = true }
flate2 = { workspace = true }
sanitise-file-name = "1.0.0"
getrandom = { version = "0.2.9", default-features = false }
oxiri = { workspace = true }
reqwest = { workspace = true, features = [
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
num = { workspace = true }
ascii_tree = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
nom-greedyerror = "0.5.0"
nom-supreme = "0.8.0"
enum-assoc = "1.1.0"
ariadne = { workspace = true, features = ["auto-color"] }
strum = { workspace = true }
strum_macros = { workspace = true }
similar-string = "1.4.3"
bytecount = "0.6.8"
colored = { workspace = true }
spargebra = { version = "0.3.5" }
urlencoding = { workspace = true }
oxrdfio = "0.1.6"
oxrdf = "0.2.4"
delegate = { workspace = true }
orx-imp-vec = "2.14"
itertools = { workspace = true }
indexmap = "2.10.0"

[dev-dependencies]
env_logger = { workspace = true }
assert_fs = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true, features = [ "rt", "macros" ] }

