[package]
name = "macros"
version = "0.0.1"
edition = "2018"
authors = ["Stefan Ellmauthaler <stefan.ellmauthaler@tu-dresden.de", "Maximilian Marx <maximilian.marx@tu-dresden.de"]

[lib]
name = "macros"
proc-macro = true

[dependencies]
syn = { version = "1.0", features = [ "full" ] }
quote = "1.0"
proc-macro2 = "1.0"